fix: Align font size across browser.

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -4,6 +4,7 @@ html {
   font-family: Arial, Helvetica, 'PingFang TC', 'Noto Sans CJK TC', 'Microsoft JhengHei', 'Heiti SC', 'Source Han Sans', 'WenQuanYi Micro Hei', 'SimHei', sans-serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 18px;
 }
 
 :root {
@@ -32,8 +33,8 @@ html {
 
 @media screen and (min-width: 1024px) {
   :root {
-    --type-hero: 2.25rem; /* 36px */
-    --type-section: 1.5rem; /* 24px */
+    --type-hero: 2.5rem; /* 36px */
+    --type-section: 1.8rem; /* 24px */
     --type-item: 1.125rem; /* 18px */
     --type-body: 1rem; /* 16px */
     --type-quote: 0.9375rem; /* 15px */
